--- a/AprendizajePorRefuerzos/python37_rl.yml
+++ b/AprendizajePorRefuerzos/python37_rl.yml
@@ -4,11 +4,12 @@ channels:
   - defaults
 dependencies:
   - python=3.7
-  - gym
-  - numpy
-  - scikit-learn
-  - matplotlib
-  - torch
-  - jupyter
+  - pip:
+    - gym
+    - numpy
+    - scikit-learn
+    - matplotlib
+    - torch
+    - jupyter
 
 
